@@ -1,3 +1,8 @@
+2003-06-08  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/profile_container.cpp:
+	* libutil++/string_manip.cpp: gcc 2.91.66 fix
+
 2003-06-08  John Levon  <levon@movementarian.org>
 
 	* libpp/name_storage.h:
